# meal_manager

./: .gitattributes  .gitignore  Cargo.toml  PACKAGING.md  README.md  opencode.jsonc  rust-toolchain.toml  数据.md  配置.md
.ci-artifacts/meal_manager-ubuntu-latest/: depends_deb.txt  meal_manager_0.2.0_amd64.deb
.github/workflows/: ci.yml  release.yml  rust.yml
.opencode/: openwork.json
.opencode/agents/: openwork.md
.opencode/commands/: learn-files.md  learn-plugins.md  learn-skills.md
.opencode/skills/workspace-guide/: SKILL.md
scripts/: before-each-package.sh  before-packaging.sh  wasm_run.ps1  wasm_run.sh
src/: app.rs  error.rs  lib.rs  main.rs
src/app/: events.rs  mod.rs  state.rs
src/backend/: db.rs  domain.rs  meal_service.rs  mod.rs
src/components/: meal_view.rs  mod.rs
src/core/: db.rs  dining_analysis.rs  employee.rs  mod.rs
src/db/: mod.rs
src/dining_analysis/: mod.rs
src/domain/: employee.rs  mod.rs
src/features/: mod.rs
src/features/employees/: actions.rs  mod.rs  model.rs  service.rs  storage.rs
src/features/meal_stats/: actions.rs  analyzer.rs  mod.rs
src/handlers/: meal_handler.rs  mod.rs
src/infra/: mod.rs
src/services/: backend_result.rs  config_service.rs  meal_analysis.rs  mod.rs
src/storage/: config_parser.rs  database.rs  mod.rs
src/ui/: app.rs  app_logic.rs  card.rs  mod.rs  nav_button.rs  navbar.rs  theme_custom_light.rs
src/ui/app/: app.rs  app_impl.rs  backend_handler.rs  mod.rs  ui_handler.rs
src/ui/app/platform/: mod.rs  windows.rs
src/ui/application/: app.rs  mod.rs  ui_handler.rs
src/ui/application/platform/: windows.rs
src/ui/components/: common.rs  mod.rs
src/ui/handlers/: app_handler.rs  mod.rs
src/ui/layout/: app_shell.rs  mod.rs  sidebar.rs
src/ui/pages/: config_page.rs  dining.rs  meal_stats.rs  mod.rs  settings.rs  stats_page.rs
src/ui/pages/employees/: config_item.rs  employee_item.rs  employee_page.rs  mod.rs  page.rs
src/ui/theme/: mod.rs  styles.rs
