[package]
name = "meal_manager"
version = "0.1.0"
edition = "2024"

[dependencies]
# ui
makepad-widgets = "*"
# makepad-widgets = { git = "https://github.com/makepad/makepad", branch = "rik" }
# 序列化
serde = { version = "*", features = ["derive"] }
serde_json = "*"
regex = "*"
# 错误处理
anyhow = "*"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
# 本地数据库
redb = "*"
# Windows API
[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_Graphics_Gdi", "Win32_UI_WindowsAndMessaging", "Win32_UI_HiDpi"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
web-sys = { version = "*", features = ["Window", "Storage"] }
